using updated threejs and orbit control

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<script src="js/three.js"></script>
-		<script src="js/RobotLoader.js"></script>
+		<script src="js/RobotLoader.js" type="module"></script>
 	</body>
 </html>
